[gd_scene load_steps=21 format=3 uid="uid://cjybbal1tv5f0"]

[ext_resource type="Script" uid="uid://nsxm1ap3uiwk" path="res://ui/introduction.gd" id="1_fi4d0"]
[ext_resource type="Texture2D" uid="uid://croewxpw0s8o3" path="res://assets/静态背景2/背景颜色.png" id="1_juoam"]
[ext_resource type="Texture2D" uid="uid://bao45uf1o2f57" path="res://assets/静态背景2/窗户.png" id="2_g63kb"]
[ext_resource type="Texture2D" uid="uid://bpv0nxh5b7i1h" path="res://assets/静态背景2/窗外的鸟.png" id="3_hxtic"]
[ext_resource type="Texture2D" uid="uid://blrtyc1yuhhh8" path="res://assets/界面基础物件.png" id="3_o1ah8"]
[ext_resource type="Texture2D" uid="uid://gj4j66evmjcc" path="res://assets/静态背景2/窗外风景.png" id="4_8ffk7"]
[ext_resource type="Texture2D" uid="uid://8wip72w5j5ac" path="res://assets/静态背景2/捣药台.png" id="5_e6iy2"]
[ext_resource type="Texture2D" uid="uid://dxg82jry758sl" path="res://assets/静态背景2/破败墙壁.png" id="6_8ffk7"]
[ext_resource type="Texture2D" uid="uid://dxtgyxkjxr3px" path="res://assets/静态背景2/蜘蛛网.png" id="7_vvr1o"]
[ext_resource type="Texture2D" uid="uid://dx0dmv0736fif" path="res://assets/静态背景2/主界面组件1.png" id="8_weq0j"]
[ext_resource type="Texture2D" uid="uid://b4m57nknsyhgf" path="res://assets/静态背景2/主界面组件.png" id="9_ij1lr"]
[ext_resource type="Texture2D" uid="uid://yslcjoey3f3e" path="res://assets/静态背景2/小蜘蛛.png" id="11_e6iy2"]
[ext_resource type="Texture2D" uid="uid://clcmsyf2pfhaj" path="res://assets/静态背景2/女巫背身.png" id="12_wv30a"]
[ext_resource type="Texture2D" uid="uid://cpoe6dmdr7lfb" path="res://assets/静态背景2/坩埚atlas/坩埚01.png" id="14_wv30a"]
[ext_resource type="Texture2D" uid="uid://phxdlputkwof" path="res://assets/静态物品/章鱼触手.png" id="15_quelq"]
[ext_resource type="Texture2D" uid="uid://c0rupdgnji8q0" path="res://assets/静态物品/红水晶.png" id="16_0w4ie"]
[ext_resource type="Texture2D" uid="uid://crgnux2p3bxol" path="res://assets/静态背景2/鸟头骨.png" id="17_mxvtb"]
[ext_resource type="Texture2D" uid="uid://c3yf2v3jf8avl" path="res://assets/静态背景2/坩埚atlas/坩埚02.png" id="18_rdnfi"]
[ext_resource type="Texture2D" uid="uid://d1xwojvbeei45" path="res://assets/静态背景2/爆炸.png" id="19_01ybw"]
[ext_resource type="Texture2D" uid="uid://bfa7hibth1q84" path="res://assets/静态物品/小幽灵.png" id="20_jlhn6"]

[node name="Introduction" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fi4d0")

[node name="IntroComponents" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BackGround" type="TextureRect" parent="IntroComponents"]
layout_mode = 0
offset_right = 959.0
offset_bottom = 540.0
texture = ExtResource("1_juoam")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="WallCraps" type="TextureRect" parent="IntroComponents"]
layout_mode = 0
offset_right = 958.0
offset_bottom = 542.0
texture = ExtResource("6_8ffk7")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Basic" type="TextureRect" parent="IntroComponents"]
layout_mode = 0
offset_right = 958.0
offset_bottom = 542.0
texture = ExtResource("3_o1ah8")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Dyt" type="TextureRect" parent="IntroComponents"]
layout_mode = 0
offset_left = 789.0
offset_top = 255.0
offset_right = 941.0
offset_bottom = 451.0
texture = ExtResource("5_e6iy2")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Window" type="TextureRect" parent="IntroComponents"]
layout_mode = 0
offset_left = 132.0
offset_right = 828.0
offset_bottom = 550.0
texture = ExtResource("2_g63kb")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Bird" type="TextureRect" parent="IntroComponents/Window"]
layout_mode = 0
offset_left = -117.0
offset_top = 4.0
offset_right = 839.0
offset_bottom = 577.0
texture = ExtResource("3_hxtic")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="SceneOutside" type="TextureRect" parent="IntroComponents/Window"]
layout_mode = 0
offset_left = -125.0
offset_top = -2.0
offset_right = 831.0
offset_bottom = 571.0
texture = ExtResource("4_8ffk7")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Component1" type="TextureRect" parent="IntroComponents/Window"]
layout_mode = 0
offset_left = -132.0
offset_right = 826.0
offset_bottom = 542.0
texture = ExtResource("8_weq0j")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Component2" type="TextureRect" parent="IntroComponents/Window"]
layout_mode = 0
offset_left = -132.0
offset_right = 826.0
offset_bottom = 542.0
texture = ExtResource("9_ij1lr")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="SpidersNet" type="TextureRect" parent="IntroComponents"]
layout_mode = 0
offset_right = 958.0
offset_bottom = 542.0
texture = ExtResource("7_vvr1o")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Spider" type="TextureRect" parent="IntroComponents/SpidersNet"]
layout_mode = 0
offset_right = 958.0
offset_bottom = 542.0
texture = ExtResource("11_e6iy2")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Slide0" type="TextureRect" parent="IntroComponents"]
layout_mode = 0
offset_right = 958.0
offset_bottom = 542.0
texture = ExtResource("12_wv30a")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Slide1" type="TextureRect" parent="IntroComponents"]
layout_mode = 0
offset_left = 226.0
offset_top = 273.0
offset_right = 705.0
offset_bottom = 544.0
texture = ExtResource("14_wv30a")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Component1" type="TextureRect" parent="IntroComponents/Slide1"]
layout_mode = 0
offset_left = 37.0
offset_top = -207.0
offset_right = 225.0
offset_bottom = -85.0
rotation = 0.491529
texture = ExtResource("15_quelq")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Component2" type="TextureRect" parent="IntroComponents/Slide1"]
layout_mode = 0
offset_left = 181.0
offset_top = -151.0
offset_right = 358.0
offset_bottom = -35.0
rotation = 0.25608
texture = ExtResource("16_0w4ie")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Component3" type="TextureRect" parent="IntroComponents/Slide1"]
layout_mode = 0
offset_left = 309.0
offset_top = -34.0
offset_right = 486.0
offset_bottom = 82.0
rotation = -1.29791
texture = ExtResource("17_mxvtb")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Slide2" type="TextureRect" parent="IntroComponents"]
layout_mode = 0
offset_left = 226.0
offset_top = 273.0
offset_right = 705.0
offset_bottom = 544.0
texture = ExtResource("18_rdnfi")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Component1" type="TextureRect" parent="IntroComponents/Slide2"]
layout_mode = 0
offset_left = 114.0
offset_top = -204.0
offset_right = 594.0
offset_bottom = 66.0
rotation = 0.491529
texture = ExtResource("19_01ybw")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Slide3" type="TextureRect" parent="IntroComponents"]
layout_mode = 0
offset_left = 208.0
offset_top = 114.0
offset_right = 706.0
offset_bottom = 370.0
texture = ExtResource("20_jlhn6")
stretch_mode = 6
